kustomization/overlays/prod/aventertainment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tunneled-svc
spec:
  loadBalancerIP: 10.11.1.0
  ports:
    - name: web
      port: 8096
      protocol: TCP
    - name: discovery
      port: 7359
      protocol: UDP
  selector:
    app.kubernetes.io/name: jellyfin
  type: LoadBalancer
